# babel-scribe

./: .gitignore  README.md  pyproject.toml
babel_scribe/: cli.py  config.py  pipeline.py  providers.py  transcriber.py  translator.py  types.py
src/babel_scribe/: __init__.py  cli.py  config.py  drive.py  errors.py  pipeline.py  providers.py  transcriber.py  translator.py  types.py
tests/: conftest.py  test_cli.py  test_config.py  test_drive.py  test_pipeline.py  test_providers.py  test_transcriber.py  test_translator.py
