[project]
name = "babel-scribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pradeep Iyer", email = "pradeepiyer@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
babel-scribe = "babel_scribe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
