[project]
name = "babel-scribe"
version = "0.1.0"
description = "Audio transcription and translation CLI"
readme = "README.md"
authors = [
    { name = "Pradeep Iyer", email = "pradeepiyer@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "openai>=1.0",
    "sarvamai>=0.1.15",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "rich>=13.0",
    "tenacity>=8.0",
]

[project.scripts]
babel-scribe = "babel_scribe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "pyright>=1.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportPrivateImportUsage = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires API keys or credentials",
]
